--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -4,9 +4,7 @@
     <item android:drawable="@drawable/gradient_drawable">@drawable/gradient_drawable</item>
 
     <!-- You can insert your own image assets here -->
-    <item>
-        <bitmap
-            android:gravity="center"
-            android:src="@drawable/project_logo" />
-    </item>
+    <item android:drawable="@drawable/project_logo" android:gravity="center"/>
+    
 </layer-list>
+    
