--- a/android/app/src/main/res/drawable/gradient_drawable.xml
+++ b/android/app/src/main/res/drawable/gradient_drawable.xml
@@ -15,11 +15,10 @@
 
                     <gradient android:type="linear"  android:startX="256" android:startY="384" android:endX="768" android:endY="500">
 
-                        <item android:color="#A8EB12" android:offset="0"  />
-                        <item android:color="#00BF72" android:offset="0.3"  />
-                        <item android:color="#008793" android:offset="0.6"  />
-                        <item android:color="#004D7A" android:offset="0.75"  />
-                        <item android:color="#051937" android:offset="1"  />
+
+                        <item android:color="#ffffff" android:offset="0" />
+
+                        <item android:color="#ffffff" android:offset="1" />
 
                     </gradient>
 
